Maquetación de navbar, login y register

--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -1,1 +1,15 @@
-<p>navbar works!</p>
+<header>
+    <div id="container">
+        <div>
+            <img src="assets/platzi-icon.svg" alt="Logo de Platzi">
+        </div>
+        <div>
+            <nav>
+                <img src="assets/icons/search-icon.svg" alt="icono buscar producto">
+                <img src="assets/icons/heart-icon.svg" alt="icono de favoritos">
+                <img src="assets/icons/cart-icon.svg" alt="icono de carrito">
+                <img src="assets/icons/user-icon.svg" alt="icono de usuario">
+            </nav>
+        </div>
+    </div>
+</header>
