--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<app-navbar></app-navbar>
+<main>
+    <div id="franja"></div>
+    <div id="container">
+        <h1>LOGIN</h1>
+        <form>
+            <div class="inputs">
+                <label for="email">Correo electrónico</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="inputs">
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" required>
+            </div> 
+
+            <button type="submit">Login</button>
+
+            <p>¿Aún no tienes una cuenta? <a>Registrate</a></p>
+        </form>
+    </div>
+</main>
