--- a/src/app/pages/auth/register/register.html
+++ b/src/app/pages/auth/register/register.html
@@ -1,1 +1,35 @@
-<p>register works!</p>
+<app-navbar></app-navbar>
+<main>
+    <div id="franja"></div>
+    <div id="container">
+        <h1>SIGN UP</h1>
+        <form>
+
+            <div class="inputs">
+                <label for="name">Nombre Completo</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+
+            <div class="inputs">
+                <label for="email">Correo electrónico</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+
+            <div id="passwords">
+                <div class="inputs">
+                    <label for="password">Contraseña</label>
+                    <input type="password" class="password" name="password" required>
+                </div>
+                <div class="inputs">
+                    <label for="conf_password">Confirmar contraseña</label>
+                    <input type="password" class="password" name="conf_password" required>
+                </div>
+
+            </div>
+
+            <button type="submit">Login</button>
+
+            <p>¿Ya tienes una cuenta    ? <a>Inicia sesión</a></p>
+        </form>
+    </div>
+</main>
