--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -12,4 +12,13 @@
             </nav>
         </div>
     </div>
+    <div id="container-mobile">
+            <nav>
+                <img src="assets/icons/search-icon.svg" alt="icono buscar producto">
+                <img src="assets/icons/heart-icon.svg" alt="icono de favoritos">
+                <img src="assets/platzi-icon.svg" alt="Logo de Platzi">
+                <img src="assets/icons/cart-icon.svg" alt="icono de carrito">
+                <img src="assets/icons/user-icon.svg" alt="icono de usuario">
+            </nav>
+    </div>
 </header>
