--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,3 +1,9 @@
 <app-navbar></app-navbar>
 
 <h1> HOME</h1>
+
+<div id="container">
+    <app-product-card class="card"></app-product-card>
+    <app-product-card class="card"></app-product-card>
+    <app-product-card class="card"></app-product-card>
+</div>
