--- a/src/app/shared/components/navbar/navbar.css
+++ b/src/app/shared/components/navbar/navbar.css
@@ -17,6 +17,10 @@ header{
     grid-template-columns: 1fr 3fr;
     align-items: center;
 }
+#container > div{
+    display: flex;
+    align-items: center;
+}
 
 img{
     width: 40px;
@@ -29,4 +33,39 @@ nav{
     height: 100%;
     display: flex;
     justify-content: flex-end;
+}
+#container-mobile{
+    display: none;
+}
+
+@media (max-width: 640px) {
+    #container-mobile{
+        display: block;
+    }
+    #container{
+        display: none;
+    }
+    header{
+        top:90dvh;
+    }
+    #container-mobile{
+        width: 92%;
+        height: 100%;
+        border: 3px solid var(--blue);
+        border-radius: 20px;
+        background-color: var(--back);
+    }
+    img{
+        width: 40px;
+        height: 40px;
+        fill: var(--blue);
+        padding: 0;
+    }
+    nav{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
 }
