--- a/src/app/shared/components/product-card/product-card.html
+++ b/src/app/shared/components/product-card/product-card.html
@@ -1,1 +1,10 @@
-<p>product-card works!</p>
+<div id="product-card" >
+    <img [src]='imageUrl' alt="product image">
+    <div id="info">
+        <h1>{{title}}</h1>
+        <p>{{description}}</p>
+        <h2>{{price}}</h2>
+        <button>Ver más</button>
+    </div>
+</div>
+
