corrección de estilos y maquetación del home y busqueda

--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,6 +1,5 @@
-<app-navbar></app-navbar>
 <main>
-    <div id="franja"></div>
+    <img src="/assets/img/bannerLogin.webp" alt="imagen de login">
     <div id="container">
         <h1>LOGIN</h1>
         <form>
@@ -13,7 +12,7 @@
                 <input type="password" id="password" name="password" required>
             </div> 
 
-            <button type="submit">Login</button>
+            <button class="boton" type="submit">Acceder</button>
 
             <p>¿Aún no tienes una cuenta? <a>Registrate</a></p>
         </form>
