--- a/src/app/pages/auth/register/register.html
+++ b/src/app/pages/auth/register/register.html
@@ -1,6 +1,5 @@
-<app-navbar></app-navbar>
 <main>
-    <div id="franja"></div>
+    <img src="/assets/img/bannerSignUp.webp" alt="imagen de login">
     <div id="container">
         <h1>SIGN UP</h1>
         <form>
@@ -27,7 +26,7 @@
 
             </div>
 
-            <button type="submit">Login</button>
+            <button class="boton" type="submit">Login</button>
 
             <p>¿Ya tienes una cuenta    ? <a>Inicia sesión</a></p>
         </form>
