--- a/src/app/pages/auth/login/login.css
+++ b/src/app/pages/auth/login/login.css
@@ -1,41 +1,31 @@
 main{
     height: 100dvh;
-    width: 100%;
-    background-color: var(--green);
+    width: 86%;
+    padding: 0 7%;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
 }
 
-#franja{
-    height: 30dvh;
-    width: 100%;
-    background-color: var(--blue);
-    position:absolute;
-    top:0;
-    bottom: 0;
-    margin: auto;
-    z-index: 0;
+img{
+    width: auto;
+    height: 60dvh;
 }
 
 #container{
-    background-color: var(--back);
+    background-color: var(--font);
+    color: var(--back1);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 35px 5px;
-    margin-right: 4%;
+    padding: 50px 10px;
     border-radius: 20px;
-    border: 2px solid var(--blue);
-    box-shadow: 3px 3px 0px var(--blue);
-    z-index: 2;
 }
 
 h1{
     margin-top: 0px;
     margin-bottom:10px;
-    font-family: var(--sofia);
     font-size: 2.5rem;
 }
 
@@ -54,7 +44,6 @@ form{
 }
 
 label{
-    font-family: var(--assistant);
     font-size: 0.75rem;
     position: absolute;
     left: 10px;
@@ -62,37 +51,45 @@ label{
 }
 
 input{
-    font-family: var(--sofia);
     height: 50px;
     width: 300px;
     border-radius: 8px;
     padding:5px 10px 0;
-    border:1px solid var(--blue)
+    border:1px solid var(--back1)
 }
 
 button{
     height: 35px;
     width: 150px;
-    border-radius: 8px;
-    background-color: var(--purple);
-    border:2px solid var(--blue);
-    box-shadow: 2px 2px 0px var(--blue);
-    color:var(--back);
-    font-family: var(--poppins)
 }
 
 p{
-    font-family: var(--assistant);
     font-size: 0.75rem;
     margin: 0;
+}
+
+a{
+    font-size: 0.8rem;
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 @media (max-width:1024px) {
     main{
         justify-content: center;
     }
+    img{
+        display: none;
+    }
     #container{
-        width: 90%;
         margin: 0;
+        width: auto;
+        padding: 40px 5px;
+
+    }
+    input{
+        width: 250px;
     }
 }
