--- a/src/app/shared/components/navbar/navbar.css
+++ b/src/app/shared/components/navbar/navbar.css
@@ -7,12 +7,12 @@ header{
     display:flex;
     justify-content: center;
     z-index: 10;
+    background-color: var(--back2);
 }
 
 #container{
-    width: 92%;
+    width: 86%;
     height: 100%;
-    border-bottom: 3px solid var(--blue);
     display: grid;
     grid-template-columns: 1fr 3fr;
     align-items: center;
@@ -23,16 +23,26 @@ header{
 }
 
 img{
-    width: 40px;
+    width: 35px;
     height: auto;
-    fill: var(--blue);
-    padding: 0 20px;
+}
+fa-icon{
+    font-size: 1.75rem;
+    color: var(--font2);
+    position: relative;
+}
+img:hover, fa-icon:hover{
+    color: var(--font);
+    scale: 1.2;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
 }
 nav{
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: flex-end;
+    gap: 40px;
 }
 #container-mobile{
     display: none;
@@ -46,19 +56,20 @@ nav{
         display: none;
     }
     header{
-        top:90dvh;
+        top:auto;
+        bottom: 0;
+        padding: 5px 0;
+        border-radius: 20px 20px 0 0;
     }
     #container-mobile{
         width: 92%;
         height: 100%;
-        border: 3px solid var(--blue);
         border-radius: 20px;
-        background-color: var(--back);
+        background-color: var(--back2);
     }
     img{
-        width: 40px;
-        height: 40px;
-        fill: var(--blue);
+        width: 45px;
+        height: 45px;
         padding: 0;
     }
     nav{
