--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -6,19 +6,19 @@
         <div>
             <nav>
                 <fa-icon routerLink="/search" [icon]="search" />
-                <fa-icon [icon]="heart" />
+                <fa-icon routerLink="/register" [icon]="heart" />
                 <fa-icon routerLink="/cart" [icon]="cart" />
-                <fa-icon routerLink="/profile" [icon]="user" />
+                <fa-icon routerLink="/login" [icon]="user" />
             </nav>
         </div>
     </div>
     <div id="container-mobile">
             <nav>
                 <fa-icon routerLink="/search" [icon]="search" />
-                <fa-icon [icon]="heart" />
+                <fa-icon routerLink="/register" [icon]="heart" />
                 <img src="assets/platzi-icon.svg" routerLink="/" alt="Logo de Platzi">
                 <fa-icon routerLink="/cart" [icon]="cart" />
-                <fa-icon routerLink="/profile" [icon]="user" />
+                <fa-icon routerLink="/login" [icon]="user" />
             </nav>
     </div>
 </header>
