--- a/src/app/shared/components/product-card/product-card.html
+++ b/src/app/shared/components/product-card/product-card.html
@@ -4,7 +4,7 @@
         <h1>{{title}}</h1>
         <p>{{description}}</p>
         <h2>{{price}}</h2>
-        <button class="boton">Ver más</button>
+        <button class="button">View More</button>
     </div>
 </div>
 
