--- a/src/app/pages/auth/register/register.html
+++ b/src/app/pages/auth/register/register.html
@@ -1,34 +1,37 @@
 <main>
-    <img src="/assets/img/bannerSignUp.webp" alt="imagen de login">
+    <img src="/assets/img/bannerSignUp.webp" alt="sign up image">
     <div id="container">
         <h1>SIGN UP</h1>
         <form>
+            <span id="error-span" *ngIf='error'>Oops, something went wrong</span>
+            <span id="success-span" *ngIf='success'>Welcome,user created successfully, please log in</span>
 
             <div class="inputs">
-                <label for="name">Nombre Completo</label>
-                <input type="text" id="name" name="name" required>
+                <label for="name">Full Name</label>
+                <input type="text" id="name" name="name" [(ngModel)]="newUser.name" required>
             </div>
 
             <div class="inputs">
-                <label for="email">Correo electrónico</label>
-                <input type="email" id="email" name="email" required>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" [(ngModel)]="newUser.email" required>
+                <p *ngIf="emailError">This email is already in use</p>
             </div>
 
             <div id="passwords">
                 <div class="inputs">
-                    <label for="password">Contraseña</label>
-                    <input type="password" class="password" name="password" required>
+                    <label for="password">Password</label>
+                    <input type="password" class="password" name="password" [(ngModel)]="password" required>
                 </div>
                 <div class="inputs">
-                    <label for="conf_password">Confirmar contraseña</label>
-                    <input type="password" class="password" name="conf_password" required>
+                    <label for="conf_password">Confirm Password</label>
+                    <input type="password" class="password" name="conf_password" [(ngModel)]="conf_password" required>
                 </div>
 
             </div>
 
-            <button class="boton" type="submit">Login</button>
+            <button class="button" type="submit" (click)="register(this.newUser)" >Sign Up</button>
 
-            <p>¿Ya tienes una cuenta    ? <a>Inicia sesión</a></p>
+            <p>Already have an account? <a routerLink="/login">Sign In</a></p>
         </form>
     </div>
 </main>
